--- a/app/src/main/res/layout/row_walk_bottom_sheet_place.xml
+++ b/app/src/main/res/layout/row_walk_bottom_sheet_place.xml
@@ -23,7 +23,7 @@
 
             <TextView
                 android:id="@+id/textView"
-                android:layout_width="110dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:gravity="left"
@@ -36,6 +36,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginLeft="4dp"
                 android:numStars="5"
                 android:rating="4.5" />
         </LinearLayout>
