--- a/app/src/main/res/layout/fragment_walk.xml
+++ b/app/src/main/res/layout/fragment_walk.xml
@@ -21,6 +21,15 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
 
+            <com.google.android.material.chip.Chip
+                android:id="@+id/chipMylocation"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center|bottom"
+                android:layout_marginBottom="10dp"
+                android:text="내 위치로 가기"
+                android:textAlignment="center" />
+
             <TextView
                 android:id="@+id/textViewWalkCountdown"
                 android:layout_width="wrap_content"
@@ -82,6 +91,8 @@
                         android:layout_height="35dp"
                         android:layout_marginRight="8dp"
                         app:srcCompat="@drawable/my_location_24px" />
+
+
                 </LinearLayout>
 
             </LinearLayout>
@@ -165,7 +176,7 @@
                         android:layout_width="100dp"
                         android:layout_height="100dp"
                         android:layout_gravity="center"
-                        android:layout_marginLeft="15dp"
+                        android:layout_marginLeft="35dp"
                         android:background="@android:color/transparent"
                         android:src="@drawable/stop"
                         app:civ_border_color="#000000"
@@ -361,6 +372,12 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="40대" />
+                    <com.google.android.material.chip.Chip
+                        android:id="@+id/AgeRange5"
+                        style="@style/Widget.Material3.Chip.Suggestion"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="50대" />
 
 
                 </com.google.android.material.chip.ChipGroup>
